# gpu_programming

./: README.md
full_iir/: .gitignore  challenge.md  run_all.sh
full_iir/include/: IirFilterEngine.cuh  IirFilterEngine.h  signal.h
full_iir/src/: CPUIirFilterEngine.cpp  IirFilterEngine.cpp  IirFilterEngine.cu  filter.cpp  main.cpp
full_iir/tests/: bonus_tc10.json  bonus_tc11.json  bonus_tc8.json  tc1.json  tc2.json  tc3.json  tc4.json  tc5.json
ingp_forward/: .gitignore  CMakeLists.txt  README.md  challenge.md  csv_diff.py  print_matrices.py
ingp_forward/include/: CpuMlpEngine.h  DataLoader.h  GpuMlpEngine.h  Utility.cuh
ingp_forward/src/: CpuMlpEngine.cpp  DataLoader.cpp  GpuMlpEngine.cpp  GpuMlpEngine.cu  main.cpp
ingp_forward/tests/: net.1.weight.npy  net.2.weight.npy
ingp_forward/tests/5x5/: enc_inputs.npy  layeroutputs.0.npy  layeroutputs.1.npy  layeroutputs.2.npy
ingp_training/: .gitignore  CMakeLists.txt  README.md  challenge.md
ingp_training/include/: Camera.h  CpuINGPEngine.h  DataLoader.h  FrequencyEncoder.h  GpuINGPEngine.h  HashEncoder.h  NetworkEvaluator.h  OutputAccumulator.h  RayGeneration.h  SampleEncoder.h  SampleGenerator.h  converter.h
ingp_training/src/: CpuINGPEngine.cpp  DataLoader.cpp  GpuINGPEngine.cpp  GpuINGPEngine.cu  main.cpp
ingp_training/tests/: encoder.offsets.npy  net.0.weight.npy
ingp_training/tests/100x100/: config.json
ingp_training/tests/10x10_200_perspectives/: config.json
ingp_training/tests/5x5/: config.json
ingp_training/tests/800x800_200_perspectives/: config.json
simple_iir/: .gitignore  CMakeLists.txt  README.md  challenge.md
simple_iir/include/: CPUIirFilterEngine.h  CPUTimer.h  ConfigLoader.h  GPUTimer.cuh  IirFilterEngine.cuh  IirFilterEngine.h  babymath.h  filter.h
simple_iir/src/: ConfigLoader.cpp  IirFilterEngine.cpp  IirFilterEngine.cu  main.cpp
simple_iir/tests/: bonus_tc12.json  bonus_tc13.json  bonus_tc9.json  signal_viewer.py  tc1.json  tc2.json  tc3.json  tc4.json  tc6.json  tc7.json
